@@ -1,9 +1,3 @@
-S3method(writeData,anova)
-S3method(writeData,aov)
-S3method(writeData,default)
-S3method(writeData,glm)
-S3method(writeData,lm)
-S3method(writeData,table)
 export(addStyle)
 export(addWorksheet)
 export(conditionalFormat)
