@@ -4,13 +4,19 @@ openxlsx 1.0.4
 NEW FEATURES
 
 * write.xlsx function to write data directly to file via the writeData function
-allowing optional basic cell styling.
+ with basic cell styling.
 
 * writeDataTable now styles columns of class 'Date', 'POSIXct', 'POSIXt', 'currency', 'accounting'
  as Excel formats Date, Date, Date, Currency, accounting respectively.
 
 * Data of class 'Date', 'POSIXct', 'POSIXt', 'currency', 'accounting' are converted to integers
  upon writing (as opposed to characters).
+
+* writeDataTable converts columns of class 'hyperlink' to hyperlinks.
+
+* hyperlinks in loaded workbooks are now maintained
+
+*
 
 
 BUG FIXES
@@ -26,6 +32,10 @@ BUG FIXES
 
 * sheet names containing invalid xml charcters (&, <, >, ', ") now work when referencing
   by name and will not result in a corrupt workbook.
+
+* sheet names containing non-local characters can now be referenced by name.
+
+* Invalid factor level when missing values
 
 
 VIGNETTE
